.kubernetes/kustomize/overlays/prod/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: codelab-web
  namespace: codelab
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - secretName: tls-codelab.ai
    hosts:
    - codelab.ai
  rules:
  - host: codelab.ai
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80
